<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="done">Time\'s up!!</string>
    <string name="thirtySeconds">30s</string>
    <string name="initialScore">0/0</string>
    <string name="go">Go!</string>
    <string name="defaultRandomOption">14</string>
    <string name="defaultRandomQuestion">31 +7</string>
    <string name="play_again">Play Again</string>
</resources>
